--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "dependencies": {
     "autoprefixer": "10.4.14",
     "next": "13.3.1",
+    "next-urql": "^5.0.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-icons": "^4.8.0",
+    "react-is": "^18.2.0",
+    "styled-components": "^5.3.10",
+    "tailwindcss": "3.3.2",
+    "urql": "^4.0.2"
   }
 }
